# MyML

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-n-lint.yml
myml/dl/: __init__.py
myml/dl/grad/: graph.py  tensor.py
tests/myml/dl/grad/: test_tensor.py
