[tool.poetry]
name = "myml"
version = "0.1.0"
description = "Different ML algorithms"
authors = ["Vladimir Larkin <vladimir@larkin.one>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
